bundles/roboconf-core/src/test/resources/configurations/invalid/instanceof-name-conflict-with-count.instances
# 1st set of instances
instanceof VM {
	name: i-vm-1;

	instanceof Tomcat {
		name: i-tomcat;
		Tomcat.port: 9004;

		instanceof WAR {
			name: i-war;
		}
	}
}

# 2nd set of instances
instanceof VM {
	name: i-vm-2;
}

# 3rd set of instances
instanceof VM {
	name: i-vm-;
	count: 4;	# i-vm-1 was already defined, name conflict

	instanceof Tomcat {
		name: i-tomcat-;
		Tomcat.port: 9004;

		instanceof WAR {
			name: i-war;
		}
	}
}
